packages/kontinuous/tests/samples/ingress-cert-optout/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-public
  annotations:
    kubernetes.io/ingress.class: nginx
    kontinuous/use-cert-manager: "false"
spec:
  tls:
  - hosts:
      - test.fabrique.social.gouv.fr
  rules:
  - host: test.fabrique.social.gouv.fr
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: app
            port: 
              number: 80
